<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screen.addevent.pagerelement.detailsetter.date.fragment.DateSetterFragment">

    <TextView
        android:id="@+id/tvAddEventDateSetterTitle"
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_event_date_setter_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAddEventFromTitle"
        style="@style/MediumTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/add_event_title_from"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAddEventDateSetterTitle" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clAddEventDateSetterFromPart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAddEventFromTitle">

        <ImageView
            android:id="@+id/ivAddEventFromTimeIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/clock_icon_image"
            android:src="@drawable/ic_access_time"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAddEventFromDate"
            style="@style/BigBoldAttribute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/placeholder_from_date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivAddEventFromTimeIcon"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="2020.02.13." />

        <TextView
            android:id="@+id/tvAddEventFromHourMinute"
            style="@style/BigBoldAttribute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_from_time"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvAddEventFromDate"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="12:00" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvAddEventToTitle"
        style="@style/MediumTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/add_event_title_to"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clAddEventDateSetterFromPart" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clAddEventDateSetterToPart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAddEventToTitle">

        <ImageView
            android:id="@+id/ivAddEventToTimeIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/clock_icon_image"
            android:src="@drawable/ic_access_time"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAddEventToDate"
            style="@style/BigBoldAttribute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/placeholder_to_date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivAddEventToTimeIcon"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="2020.02.13." />

        <TextView
            android:id="@+id/tvAddEventToHourMinute"
            style="@style/BigBoldAttribute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_to_time"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvAddEventToDate"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="14:00" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>